# loongside

./: .coderabbit.yaml  .convention-engineering.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  Taskfile.yml  clippy.toml  deny.toml  rustfmt.toml
crates/app/: Cargo.toml  build.rs
crates/app/build_support/: version_metadata.rs
crates/app/skills/browser-companion-preview/: SKILL.md
crates/app/src/: advisory_prompt.rs  agent_runtime.rs  chat.rs  context.rs  control_plane.rs  lib.rs  observability.rs  presentation.rs  process_env.rs  process_launch.rs  runtime_env.rs  runtime_identity.rs  runtime_self.rs  runtime_self_continuity.rs  secrets.rs  test_support.rs  trust.rs  tui_surface.rs
crates/app/src/acp/: acpx.rs  acpx_command.rs  acpx_doctor_tests.rs  acpx_events.rs  acpx_handle.rs  acpx_mcp.rs  acpx_process.rs  analytics.rs  backend.rs  binding.rs  manager.rs  manager_actor.rs  manager_sessions.rs  manager_support.rs  mod.rs  registry.rs  runtime.rs  store.rs
crates/app/src/channel/: access_policy.rs  dingtalk.rs  discord.rs  dispatch.rs  email.rs  google_chat.rs  http.rs  imessage.rs  irc.rs  line.rs  matrix.rs  mattermost.rs  mod.rs  nextcloud_talk.rs  nostr.rs  plugin_bridge_runtime.rs  registry.rs  registry_bridge.rs  registry_nostr_impl.rs  registry_plugin_bridge.rs  registry_plugin_bridge_tests.rs  registry_status.rs  registry_surface.rs  runtime_state.rs  sdk.rs  serve_runtime.rs  signal.rs  signal_command.rs  slack.rs  synology_chat.rs  teams.rs  telegram.rs  tlon.rs  tlon_command.rs  turn_feedback.rs  twitch.rs  twitch_command.rs  types.rs  webhook.rs  wecom.rs
crates/app/src/chat/: cli_input.rs  control_plane.rs  latest_session_selector_tests.rs  live_runtime.rs  operator_surfaces.rs  session_surface.rs
crates/app/src/config/: audit.rs  channels.rs  channels_account_resolution.rs  channels_bridge.rs  channels_defaults.rs  channels_email_support.rs  channels_irc_impl.rs  channels_nostr_impl.rs  channels_shared_types.rs  channels_signal_impl.rs  channels_validation.rs  conversation.rs  feishu_integration.rs  irc.rs  memory.rs  mod.rs  outbound_http.rs  provider.rs  runtime.rs  shared.rs  tools.rs  tools_memory.rs
crates/app/src/conversation/: active_external_skills.rs  analytics.rs  announce.rs  approval_resolution.rs  autonomy_policy.rs  compaction.rs  context_engine.rs  context_engine_registry.rs  delegate_support.rs  ingress.rs  integration_tests.rs  lane_arbiter.rs  mod.rs  persistence.rs  plan_executor.rs  plan_ir.rs  plan_verifier.rs  prompt_fragments.rs  prompt_frame.rs  prompt_orchestrator.rs  runtime.rs  runtime_binding.rs  safe_lane_failure.rs  session_address.rs  session_history.rs  session_state.rs  subagent.rs  tests.rs  tool_discovery_state.rs  tool_input_contract.rs  tool_result_compaction.rs  trust_projection.rs  turn_budget.rs  turn_checkpoint.rs  turn_coordinator.rs  turn_coordinator_support.rs  turn_engine.rs  turn_loop.rs  turn_middleware.rs  turn_middleware_registry.rs  (+3 more)
crates/app/src/crypto/: hmac.rs  mod.rs  timing.rs
crates/app/src/feishu/: client.rs  runtime.rs  token_store.rs
crates/app/src/mcp/: config.rs  mod.rs  registry.rs  types.rs
crates/app/src/memory/: canonical.rs  context.rs  durable_flush.rs  durable_recall.rs  execution.rs  kernel_adapter.rs  mod.rs  orchestrator.rs  protocol.rs  runtime_config.rs  sqlite.rs  sqlite_core.rs  stage.rs  system.rs  system_registry.rs  system_runtime.rs  tests.rs  workspace_document.rs  workspace_files.rs
crates/app/src/migration/: merge.rs  mod.rs  orchestrator.rs
crates/app/src/operator/: approval_runtime.rs  delegate_runtime.rs  mod.rs  session_graph.rs
crates/app/tests/: build_metadata.rs  conversation_integration.rs  crypto_helpers.rs
crates/bench/: Cargo.toml
crates/bench/src/: lib.rs
crates/bench/tests/: bench_integration.rs
crates/bridge-runtime/: Cargo.toml
crates/bridge-runtime/src/: http_json.rs  process_stdio.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: audit_types.rs  child_process_env.rs  contracts.rs  errors.rs  fault.rs  lib.rs  pack.rs  policy_types.rs  secret_ref.rs  secret_resolver.rs  secret_value.rs  task_state.rs  work_types.rs  workflow_types.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: acp_cli.rs  audit_cli.rs  browser_companion_diagnostics.rs  browser_preview.rs  channel_access_policy_render.rs  channel_bridge_render.rs  channel_cli_specs.rs  channel_resolution.rs  channel_send_cli_tests.rs  channel_send_target_kind.rs  cli_handoff.rs  cli_json.rs  command_kind.rs  command_kind_tests.rs  completions_cli.rs  control_plane_server.rs  copilot_onboarding.rs  delegate_child_cli.rs  doctor_cli.rs  doctor_security_cli.rs  env_compat.rs  external_skills_policy_probe.rs  feishu_cli.rs  feishu_onboarding.rs  feishu_support.rs  import_claw_cli.rs  import_cli.rs  lib.rs  lib_first_run_entry_tests.rs  main.rs  managed_plugin_bridge_runtime.rs  mcp_cli.rs  memory_context_benchmark.rs  migrate_cli.rs  next_actions.rs  observability.rs  onboard_cli.rs  onboard_finalize.rs  onboard_preflight.rs  onboard_presentation.rs  (+39 more)
crates/daemon/tests/: integration.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: architecture.rs  audit.rs  awareness.rs  bootstrap.rs  connector.rs  errors.rs  harness.rs  integration.rs  kernel.rs  lib.rs  mailbox.rs  memory.rs  plugin.rs  plugin_ir.rs  policy.rs  policy_ext.rs  runtime.rs  task_supervisor.rs  test_support.rs  tests.rs  tool.rs
crates/kernel/tests/: kernel_integration.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: control_plane.rs  lib.rs  test_support.rs
crates/protocol/tests/: protocol_transport.rs
crates/spec/: Cargo.toml
crates/spec/config/: bridge-support-native-balanced.json  bridge-support-openclaw-ecosystem-balanced.json  plugin-preflight-medium-balanced.json
crates/spec/src/: kernel_bootstrap.rs  lib.rs  path_policy.rs  programmatic.rs  spec_bridge_protocol.inc.rs  spec_execution.rs  spec_runtime.rs  test_support.rs
crates/spec/tests/: spec_execution.rs
(+825 files in other folders)
