[workspace]
members = [
  "crates/kernel",
  "crates/daemon",
  "crates/protocol",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["chumyin"]

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "io-std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
futures-util = "0.3"
sha2 = "0.10"
wasmparser = "0.240"
base64 = "0.22"
ed25519-dalek = "2.2"
wasmtime = "31"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
