[package]
name = "loongclaw-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["channel-cli", "channel-telegram", "channel-feishu", "config-toml", "memory-sqlite", "feishu-integration", "tool-shell", "tool-file", "tool-browser", "tool-webfetch", "tool-websearch", "provider-openai", "provider-anthropic", "provider-bedrock", "provider-volcengine"]
channel-cli = []
channel-telegram = []
channel-feishu = ["dep:axum", "dep:aes", "dep:cbc", "feishu-integration"]
provider-openai = []
provider-anthropic = []
provider-bedrock = ["dep:aws-config", "dep:aws-credential-types", "dep:aws-sigv4", "dep:http"]
provider-volcengine = []
config-toml = ["dep:toml"]
memory-sqlite = ["dep:rusqlite"]
feishu-integration = ["dep:rusqlite"]
tool-shell = []
tool-file = []
tool-browser = ["dep:scraper"]
tool-webfetch = []
tool-websearch = ["dep:regex"]
test-support = []

[dependencies]
loongclaw-contracts = { path = "../contracts" }
loongclaw-kernel = { path = "../kernel" }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true, optional = true }
reqwest.workspace = true
scraper = { version = "0.26", optional = true }
sha2.workspace = true
flate2.workspace = true
tar.workspace = true
tokio.workspace = true
futures-util.workspace = true
base64.workspace = true
aws-config = { version = "1.8.15", optional = true }
aws-credential-types = { version = "1.2.14", optional = true }
aws-sigv4 = { version = "1.4.2", optional = true }
http = { version = "1.4.0", optional = true }
time.workspace = true
http-body = "1"
rusqlite = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
wait-timeout = "0.2"
regex = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
