[package]
name = "loongclaw-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["channel-cli", "channel-telegram", "channel-feishu", "channel-matrix", "config-toml", "memory-sqlite", "feishu-integration", "tool-shell", "tool-file", "tool-browser", "tool-webfetch", "tool-websearch", "provider-openai", "provider-anthropic", "provider-bedrock", "provider-volcengine"]
channel-cli = []
channel-telegram = []
channel-feishu = ["dep:axum", "dep:aes", "dep:cbc", "dep:prost", "dep:rustls", "dep:tokio-tungstenite", "feishu-integration"]
channel-matrix = []
provider-openai = []
provider-anthropic = []
provider-bedrock = ["dep:aws-config", "dep:aws-credential-types", "dep:aws-sigv4", "dep:http"]
provider-volcengine = []
config-toml = ["dep:toml"]
memory-sqlite = ["dep:rusqlite"]
feishu-integration = ["dep:rusqlite"]
tool-shell = []
tool-file = []
tool-browser = ["dep:scraper"]
tool-webfetch = []
tool-websearch = []
test-support = []

[dependencies]
loongclaw-contracts = { path = "../contracts" }
loongclaw-kernel = { path = "../kernel" }
async-trait.workspace = true
rand.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml = { workspace = true, optional = true }
reqwest.workspace = true
scraper = { version = "0.26", optional = true }
sha2.workspace = true
hmac = "0.12"
hex = "0.4"
subtle = "2.6"
flate2.workspace = true
tar.workspace = true
tokio.workspace = true
futures-util.workspace = true
base64.workspace = true
aws-config = { version = "1.8.15", optional = true }
aws-credential-types = { version = "1.2.14", optional = true }
aws-sigv4 = { version = "1.4.2", optional = true }
http = { version = "1.4.0", optional = true }
time.workspace = true
http-body = "1"
rusqlite = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
wait-timeout = "0.2"
tempfile = "3"
which.workspace = true
# Kept unconditional because conversation/turn_shared.rs uses Regex to strip
# leaked <think> tags even when tool-websearch is compiled out.
regex.workspace = true
prost = { version = "0.13", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"], optional = true }

[dev-dependencies]
axum.workspace = true

[lints]
workspace = true
