[package]
name = "loongclaw-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Internal support crate for LoongClaw: stable shared contracts"
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
thiserror.workspace = true
zeroize = "1.8"

[dev-dependencies]
toml.workspace = true

[lints]
workspace = true
