[package]
name = "loongclaw-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "loongclaw_daemon"
path = "src/lib.rs"

[features]
default = ["mvp"]
mvp = ["loongclaw-app/default", "memory-sqlite"]
test-support = []
channel-cli = ["loongclaw-app/channel-cli"]
channel-telegram = ["loongclaw-app/channel-telegram"]
channel-feishu = ["loongclaw-app/channel-feishu"]
channel-matrix = ["loongclaw-app/channel-matrix"]
channel-wecom = ["loongclaw-app/channel-wecom"]
channel-discord = ["loongclaw-app/channel-discord"]
channel-dingtalk = ["loongclaw-app/channel-dingtalk"]
channel-slack = ["loongclaw-app/channel-slack"]
channel-webhook = ["loongclaw-app/channel-webhook"]
channel-google-chat = ["loongclaw-app/channel-google-chat"]
channel-line = ["loongclaw-app/channel-line"]
channel-signal = ["loongclaw-app/channel-signal"]
channel-teams = ["loongclaw-app/channel-teams"]
channel-whatsapp = ["loongclaw-app/channel-whatsapp"]
channel-email = ["loongclaw-app/channel-email"]
channel-mattermost = ["loongclaw-app/channel-mattermost"]
channel-nextcloud-talk = ["loongclaw-app/channel-nextcloud-talk"]
channel-synology-chat = ["loongclaw-app/channel-synology-chat"]
channel-imessage = ["loongclaw-app/channel-imessage"]
provider-openai = ["loongclaw-app/provider-openai"]
provider-anthropic = ["loongclaw-app/provider-anthropic"]
provider-bedrock = ["loongclaw-app/provider-bedrock"]
provider-volcengine = ["loongclaw-app/provider-volcengine"]
config-toml = ["loongclaw-app/config-toml"]
memory-sqlite = ["loongclaw-app/memory-sqlite"]
tool-shell = ["loongclaw-app/tool-shell"]
tool-file = ["loongclaw-app/tool-file"]
tool-webfetch = ["loongclaw-app/tool-webfetch"]
tool-websearch = ["loongclaw-app/tool-websearch"]
tool-browser = ["loongclaw-app/tool-browser"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[dependencies]
clap.workspace = true
clap_complete = "4.5"
dialoguer.workspace = true
kernel = { package = "loongclaw-kernel", path = "../kernel" }
loongclaw-bench = { path = "../bench" }
loongclaw-app = { path = "../app", default-features = false }
loongclaw-contracts = { path = "../contracts" }
loongclaw-spec = { path = "../spec" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
tokio.workspace = true
time.workspace = true
toml.workspace = true
chrono.workspace = true
base64.workspace = true
rand.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
dunce = "1"

[[bin]]
name = "loongclaw"
path = "src/main.rs"

[dev-dependencies]
axum.workspace = true
loongclaw-spec = { path = "../spec", features = ["test-hooks"] }
sha2.workspace = true
wat = "1"

[lints]
workspace = true
