[package]
name = "loongclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "loong"
description = "Primary CLI crate for LoongClaw vertical AI agents"
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[lib]
name = "loongclaw_daemon"
path = "src/lib.rs"

[features]
default = ["mvp"]
mvp = ["loongclaw-app/default", "memory-sqlite"]
test-support = []
channel-cli = ["loongclaw-app/channel-cli"]
channel-telegram = ["loongclaw-app/channel-telegram"]
channel-feishu = ["loongclaw-app/channel-feishu"]
channel-matrix = ["loongclaw-app/channel-matrix"]
channel-wecom = ["loongclaw-app/channel-wecom"]
channel-discord = ["loongclaw-app/channel-discord"]
channel-dingtalk = ["loongclaw-app/channel-dingtalk"]
channel-slack = ["loongclaw-app/channel-slack"]
channel-webhook = ["loongclaw-app/channel-webhook"]
channel-google-chat = ["loongclaw-app/channel-google-chat"]
channel-line = ["loongclaw-app/channel-line"]
channel-signal = ["loongclaw-app/channel-signal"]
channel-twitch = ["loongclaw-app/channel-twitch"]
channel-teams = ["loongclaw-app/channel-teams"]
channel-tlon = ["loongclaw-app/channel-tlon"]
channel-whatsapp = ["loongclaw-app/channel-whatsapp"]
channel-email = ["loongclaw-app/channel-email"]
channel-mattermost = ["loongclaw-app/channel-mattermost"]
channel-nextcloud-talk = ["loongclaw-app/channel-nextcloud-talk"]
channel-synology-chat = ["loongclaw-app/channel-synology-chat"]
channel-irc = ["loongclaw-app/channel-irc"]
channel-imessage = ["loongclaw-app/channel-imessage"]
channel-nostr = ["loongclaw-app/channel-nostr"]
provider-openai = ["loongclaw-app/provider-openai"]
provider-anthropic = ["loongclaw-app/provider-anthropic"]
provider-bedrock = ["loongclaw-app/provider-bedrock"]
provider-volcengine = ["loongclaw-app/provider-volcengine"]
config-toml = ["loongclaw-app/config-toml"]
memory-sqlite = ["loongclaw-app/memory-sqlite"]
tool-shell = ["loongclaw-app/tool-shell"]
tool-file = ["loongclaw-app/tool-file"]
tool-http = ["loongclaw-app/tool-http"]
tool-webfetch = ["loongclaw-app/tool-webfetch"]
tool-websearch = ["loongclaw-app/tool-websearch"]
tool-browser = ["loongclaw-app/tool-browser"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[dependencies]
async-trait.workspace = true
axum = { workspace = true, features = ["query"] }
clap.workspace = true
clap_complete = "4.5"
dialoguer.workspace = true
kernel = { package = "loong-kernel", version = "0.1.0-alpha.3", path = "../kernel" }
loongclaw-bench = { package = "loong-bench", version = "0.1.0-alpha.3", path = "../bench" }
loongclaw-app = { package = "loong-app", version = "0.1.0-alpha.3", path = "../app", default-features = false }
loongclaw-bridge-runtime = { version = "0.1.0-alpha.3", path = "../bridge-runtime" }
loongclaw-contracts = { package = "loong-contracts", version = "0.1.0-alpha.3", path = "../contracts" }
loongclaw-protocol = { package = "loong-protocol", version = "0.1.0-alpha.3", path = "../protocol" }
loongclaw-spec = { package = "loong-spec", version = "0.1.0-alpha.3", path = "../spec" }
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
time.workspace = true
toml.workspace = true
chrono.workspace = true
sha2.workspace = true
semver.workspace = true
ed25519-dalek.workspace = true
dunce = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
loongclaw-spec = { package = "loong-spec", version = "0.1.0-alpha.3", path = "../spec", features = ["test-hooks"] }
syn = { version = "2", features = ["full", "visit"] }
tower = { version = "0.5", features = ["util"] }
wat = "1"

[[bin]]
name = "loong"
path = "src/main.rs"

[[bin]]
name = "loongclaw"
path = "src/main.rs"

[lints]
workspace = true
