[package]
name = "loongclaw-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Internal support crate for LoongClaw: protocol and transport types"
repository.workspace = true
homepage.workspace = true

[features]
test-support = []

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]

[lints]
workspace = true
