[package]
name = "loongclaw-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Internal support crate for LoongClaw: specification execution surfaces"
repository.workspace = true
homepage.workspace = true

[features]
test-hooks = []
test-support = ["test-hooks"]

[dependencies]
async-trait.workspace = true
kernel = { package = "loongclaw-kernel", version = "0.1.0-alpha.3", path = "../kernel" }
loongclaw-contracts = { version = "0.1.0-alpha.3", path = "../contracts" }
loongclaw-protocol = { version = "0.1.0-alpha.3", path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
futures-util.workspace = true
sha2.workspace = true
tokio.workspace = true
wasmparser.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
wasmtime.workspace = true
semver.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wat = "1"

[lints]
workspace = true
