[package]
name = "loong-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Internal support crate for Loong: specification execution surfaces"
repository.workspace = true
homepage.workspace = true

[lib]
name = "loong_spec"

[features]
test-hooks = []
test-support = ["test-hooks"]

[dependencies]
async-trait.workspace = true
kernel = { package = "loong-kernel", version = "0.1.2-alpha.1", path = "../kernel" }
loong-contracts = { package = "loong-contracts", version = "0.1.2-alpha.1", path = "../contracts" }
loong-protocol = { package = "loong-protocol", version = "0.1.2-alpha.1", path = "../protocol" }
loong-bridge-runtime = { version = "0.1.2-alpha.1", path = "../bridge-runtime" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
futures-util.workspace = true
sha2.workspace = true
tokio.workspace = true
wasmparser.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
wasmtime.workspace = true
semver.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wat = "1"

[lints]
workspace = true
